--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,6 +74,7 @@ header {
     right: 0px;
     z-index: 10;
     position: absolute;
+    display: none;
 }
 
 /* メニュー項目部分 */
@@ -121,7 +122,9 @@ header {
     top: 80px;
     cursor: pointer;
 }
-
+.ac__button{
+    cursor: pointer;
+}
 /* アコーディオンメニュー開いたときの内容（親要素） */
 
 /* アコーディオンメニュー表示時の表記 */
@@ -144,8 +147,8 @@ header {
 }
 
 /* mainセクション（投稿部分） */
-.main_container .post {
-    height: 200px;
+.section_post .post {
+    height: 150px;
 }
 
 .section_post .post {
