--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,18 +91,17 @@ header {
     text-align: center;
     /* 以下、1番目と3番目要素に線をつける */
     display: block;
-    padding: 40px 0;
+    /* padding: 40px 0; */
     background-color: #fff;
     transition: .8s;
 }
 /*  */
 /* アコーディオンメニュー表示時の表記 */
-.ac__body .body_inner a {
+.ac__body .body_inner a{
     color: #333;
     z-index: 100;
-    height: 100%;
-    width: 100%;
     display: block;
+    line-height: 80px;
 }
 
 /* 枠線 */
